--- a/src/app/components/productcompopnent/product.view.html
+++ b/src/app/components/productcompopnent/product.view.html
@@ -13,6 +13,7 @@
         <div class="form-group">
             <label>Price</label>
             <input type="text" name="Price" [(ngModel)]="product.Price" class="form-control">
+            <input type="text" class="form-control" [value]="productTax" disabled />
         </div>
         <div class="form-group">
             <label>Category</label>
